# atmospheric-toolkit

./: .gitignore  OBSERVATIONS.md  check_dewpoint.py  main.py  pyproject.toml
scripts/: download_era5_z500.py  validate_zw3.py
tests/: test_asl.py  test_diagnostics.py  test_humidity.py  test_sam.py  test_speed.py  test_thermo.py  test_zw3.py
windtools/: asl.py  diagnostics.py  humidity.py  sam.py  speed.py  thermo.py  zw3.py
