[project]
name = "atmospheric-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cdsapi>=0.7.7",
    "metpy>=1.7.1",
    "netcdf4>=1.7.4",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pytest>=9.1.1",
    "xarray>=2026.7.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["windtools"]
